# llm-consortium

./: .env.example  .gitignore  API.md  CHANGELOG.md  CONTEXT_PACK.md  CONTRIBUTING.md  LICENSE  Makefile  NOTES-semantic-filtering.md  README.md  TODO.md  VALIDATION_SUMMARY.md  check_installation.sh  prompt.txt  prompt_2.txt  pyproject.toml  pyproject.toml.backup.1762964208  requirements.txt  run_test.py  run_test_actual.py  run_test_dummy.py  test_llm_response.py  tty
docs/: API.md  TODO.md
evals/: README.md  analyze_results.py  benchmark_runner.py  blind_judge.py  prompts.json
examples/: cns-examples.sh  cns-ux-observations.md  cns_examples.py  demo.py  elimination_strategy_demo.py  updated_usage_examples.md  voting_strategy_demo.py
llm_consortium/: __init__.py  __init__.py.backup.1762964209  arbiter_prompt.xml  auto_arbiter_lean.xml  auto_arbiter_pick_lean.xml  auto_arbiter_rank_lean.xml  cli.py  consortium.py  conversation_manager.py  db.py  evaluation_store.py  geometry.py  logger.py  logger.py.backup.1762982613  models.py  orchestrator.py  rank_prompt.xml  system_prompt.txt  system_prompt.xml  tracing.py  visualization.py
scripts/: install_embeddings.sh  quick_setup.sh  setup.sh  test_installation.sh
studio/: .npmrc  README.md  package-lock.json  tailwind.config.js
tests/: run_tests.sh  test_arbiter_parsing.py  test_cli.py  test_confidence_parsing.py  test_embedding_service.py  test_embeddings_db.py  test_file_readers.py  test_geometric_confidence.py  test_integration.py  test_llm_consortium.py  test_model_parsing.py  test_multi_turn_conversation.py  (+1 more)
(+35 files in other folders)
