[project]
name = "llm-consortium"
version = "0.8.0"
description = "LLM plugin implementing Andrej Karpathy's model consortium tweet"
readme = "README.md"
authors = [{name = "Thomas Hughes", email = "irthomasthomas@gmail.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "click",
    "httpx",
    "sqlite-utils",
    "asyncio",
    "numpy",
    "colorama",
    "python-json-logger"
]

[project.optional-dependencies]
embeddings = [
    "scikit-learn",
    "hdbscan",
    "openai",
    "sentence-transformers"
]
visualize = [
    "plotly"
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/irthomasthomas/karpathy-consortium"
Changelog = "https://github.com/irthomasthomas/karpathy-consortium/releases"
Issues = "https://github.com/irthomasthomas/karpathy-consortium/issues"

[project.entry-points.llm]
llm_consortium = "llm_consortium"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
packages = ["llm_consortium", "llm_consortium.embeddings", "llm_consortium.strategies"]

[tool.setuptools.package-data]
llm_consortium = [
    "system_prompt.xml",
    "arbiter_prompt.xml",
    "iteration_prompt.xml",
    "rank_prompt.xml",
    "auto_arbiter_lean.xml",
    "auto_arbiter_pick_lean.xml",
    "auto_arbiter_rank_lean.xml"
]
